# markitdown

./: .gitignore  IMPLEMENTATION-SUMMARY.md  README-GUI.md  SETUP-GUI.md  pyproject.toml  requirements-gui.txt
gui/: ARCHITECTURE.md  IMPLEMENTATION-VALIDATION.md  README.md  __init__.py  __main__.py
gui/assets/: .gitkeep
gui/components/: __init__.py  batch_ui.py  cloud_explorer.py  ctk_components.py  diff_viewer.py  document_viewer.py  export_ui.py  markdown_preview.py  plugin_manager_ui.py  split_view.py  template_editor.py  workspace_tabs.py
gui/config/: CONFIGURATION-SUMMARY.md  README.md  __init__.py  config.default.yaml  config.development.yaml  config.test.yaml  config.yaml.example  example_usage.py  settings.py
gui/controllers/: __init__.py  conversion_controller.py
gui/core/: __init__.py  app.py  batch_processor.py  cloud_storage.py  document_comparator.py  events.py  exporters.py  markdown_renderer.py  observer.py  plugin_system.py  state.py  templates.py  workspace.py
gui/exporters/: __init__.py  confluence_exporter.py  github_wiki_exporter.py  medium_exporter.py  notion_exporter.py  obsidian_exporter.py  wordpress_exporter.py
gui/integrations/: __init__.py  aws_s3_provider.py  dropbox_provider.py  google_drive.py  onedrive_provider.py
gui/models/: __init__.py  conversion_model.py
gui/plugins/: __init__.py  git_plugin.py  notion_plugin.py  ocr_plugin.py
gui/utils/: __init__.py
gui/views/: BATCH-ASYNC-INTEGRATION.md  BATCH-FINAL-SUMMARY.md  BATCH-PROCESSING-README.md  BATCH-SYSTEM-SUMMARY.md  CLOUD-STORAGE-README.md  CLOUD-STORAGE-SUMMARY.md  COMPARISON-SYSTEM-README.md  EXPORT-SYSTEM-README.md  EXPORT-SYSTEM-SUMMARY.md  MODERN-UI-README.md  MODERN-UI-SUMMARY.md  PLUGIN-SYSTEM-README.md  PLUGIN-SYSTEM-SUMMARY.md  PREVIEW-SYSTEM-README.md  PREVIEW-SYSTEM-SUMMARY.md  TEMPLATE-SYSTEM-README.md  (+13 more)
tests/: __init__.py
(+6 files in other folders)
