[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "markitdown-gui"
version = "0.1.0"
description = "Graphical User Interface for MarkItDown - A utility tool for converting various files to Markdown"
readme = "README-GUI.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MarkItDown GUI Contributors"}
]
keywords = ["markdown", "converter", "gui", "file-conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

dependencies = [
    "markitdown[all]>=0.1.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "ttkthemes>=3.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/markitdown"
Documentation = "https://github.com/microsoft/markitdown#readme"
Repository = "https://github.com/microsoft/markitdown"
Issues = "https://github.com/microsoft/markitdown/issues"

[project.scripts]
markitdown-gui = "gui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["gui"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false


